--- a/src/app/componentes/busqueda/busqueda.component.html
+++ b/src/app/componentes/busqueda/busqueda.component.html
@@ -1,1 +1,69 @@
-<p>busqueda works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand">Navbar</a>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item active">
+          <a class="nav-link">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+          <div class="dropdown-menu" aria-labelledby="dropdown01">
+            <a class="dropdown-item">Action</a>
+            <a class="dropdown-item">Another action</a>
+            <a class="dropdown-item">Something else here</a>
+          </div>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+</nav>
+  
+  
+      <div class="jumbotron">
+        <div class="container">
+          <h1 class="display-3">Listado de Películas</h1>
+          <p>Insertar componente tablaPelículas</p>
+          <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
+        </div>
+      </div>
+  
+  
+      <div class="container">
+        <!-- Example row of columns -->
+        <div class="row">
+          <div class="col-md-4">
+            <h2>Para borrar</h2>
+            <p>Componente para borrar</p>
+            <p><a class="btn btn-secondary" role="button">Borrar</a></p>
+          </div>
+          <div class="col-md-4">
+            <h2>Detalle Películas</h2>
+            <p>Componente para detallar</p>
+            <p><a class="btn btn-secondary" role="button">Limpiar</a></p>
+         </div>
+          <div class="col-md-4">
+            <h2>Modificar</h2>
+            <p>Componente para modificar</p>
+            <p><a class="btn btn-secondary" role="button">Guardar cambios</a></p>
+          </div>
+        </div>
+  
+        <hr>
+  
+        <footer>
+          <p>&copy; Company 2017</p>
+        </footer>
+      </div>
+  
