--- a/src/app/componentes/tabla-peliculas/tabla-peliculas.component.html
+++ b/src/app/componentes/tabla-peliculas/tabla-peliculas.component.html
@@ -1,1 +1,3 @@
-<p>tabla-peliculas works!</p>
+<h1 class="display-3">Listado de Películas</h1>
+<p>Insertar componente tablaPelículas</p>
+<p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
